--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,28 @@ enable_testing()
 
 string(REGEX REPLACE "(.*)/" "" THIS_PACKAGE_NAME "${CMAKE_CURRENT_SOURCE_DIR}")
 
+set(PYBIND11_FINDPYTHON ON)
 
-if (${CMAKE_GENERATOR} MATCHES "Xcode")
-         if (${XCODE_VERSION} VERSION_LESS 10)
-              message(STATUS "Xcode 10 or higher is required. Please install from the Mac App Store.")
-            return ()
-        endif ()
-endif ()
+if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+    if (${CMAKE_GENERATOR} MATCHES "Xcode")
+            if (${XCODE_VERSION} VERSION_LESS 10)
+                message(STATUS "Xcode 10 or higher is required. Please install from the Mac App Store.")
+                return ()
+            # elseif(${XCODE_VERSION} VERSION_GREATER_EQUAL 12)
+            #     set(C74_BUILD_FAT YES)
+            endif ()
+    endif ()
+
+    if (NOT CMAKE_OSX_ARCHITECTURES)
+        if(C74_BUILD_FAT)
+            set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "macOS architecture" FORCE)
+        else()
+            set(CMAKE_OSX_ARCHITECTURES ${CMAKE_SYSTEM_PROCESSOR} CACHE STRING "macOS architecture" FORCE)
+        endif()
+        message("CMAKE_OSX_ARCHITECTURES set to ${CMAKE_OSX_ARCHITECTURES}")
+    endif()
+endif()
+
 
 
 # Fetch the correct version of the min-api
@@ -20,7 +35,6 @@ execute_process(
     COMMAND				git submodule update --init --recursive
     WORKING_DIRECTORY	"${CMAKE_CURRENT_SOURCE_DIR}"
 )
-
 
 # Misc setup and subroutines
 include(${CMAKE_CURRENT_SOURCE_DIR}/source/min-api/script/min-package.cmake)
